# clip-streamlit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
clip_streamlit/: __init__.py  app.py  base.py
clip_streamlit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
